--- a/src/index.css
+++ b/src/index.css
@@ -20,20 +20,21 @@
 /* TODO: proper theme system later */
 body {
 	background-color: #212121;
+	overflow: hidden; 
 }
 
 .editor-text, .editor-text-field, .editor-placeholder {
-	@apply text-xl text-amber-100;
+	@apply text-xl text-amber-100 font-mono;
 }
 
 textarea.editor-text-field {
-	@apply outline-none bg-transparent resize-none overflow-hidden;
-
+	@apply outline-none bg-transparent resize-none overflow-hidden whitespace-nowrap border-b border-amber-200/50;
+	
 	animation: fade-in 0.5s ease-in;
 }
 
 *.editor-placeholder {
 	opacity: 60%;
-
+	
 	animation: fade-in 0.5s ease-in;
 }
