--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "./common/style.css";
+@import "titlebar.css";
 
 @keyframes fade-in {
 	0% {
@@ -24,10 +25,13 @@ body {
 }
 
 .editor-text, .editor-text-field, .editor-placeholder {
-	@apply text-xl text-amber-100 font-mono;
+	@apply text-xl text-amber-100 font-mono ;
+}
+.editor-text-field, .editor-placeholder {
+	@apply border-b border-amber-200/50;
 }
 textarea.editor-text-field {
-	@apply outline-none bg-transparent resize-none overflow-hidden whitespace-nowrap border-b border-amber-200/50;
+	@apply outline-none bg-transparent resize-none overflow-hidden border-b ;
 	
 	animation: fade-in 0.5s ease-in;
 }
